# Chessy

./: .gitignore  README.md  flake.nix  package.json  rust-toolchain  shell.nix
.github/workflows/: jekyll-gh-pages.yml
chess_engine/: Cargo.toml
chess_engine/src/: game_model.rs  get_starting_board.rs  lib.rs  main.rs  model.rs  move_piece.rs  valid_movements_positions.rs
chess_engine/src/model/: board.rs  board_movement.rs  board_path.rs  board_position.rs  chess_board_directions.rs  chess_cell.rs  chess_file.rs  chess_piece.rs  chess_rank.rs  game.rs  mod.rs  piece_colors.rs  piece_types.rs  player.rs
chessy_backend/: .env  Cargo.toml
chessy_backend/src/: game.rs  main.rs  player.rs
chessy_backend/src/routes/: mod.rs  rest_api.rs  ws.rs
chessy_backend/src/websocket/: messages.rs  mod.rs  server.rs
chessy_frontend/: .env.production  README.md  index.html  package-lock.json  package.json  vite.config.js
chessy_frontend/src/: App.vue  main.js
chessy_frontend/src/assets/: base.css  color.css  colors.css  reset.css  typography.css
chessy_frontend/src/components/: Color.js  formField.js  textForm.vue
chessy_frontend/src/components/molecules/: buttonHero.vue  buttonImportant.vue  formField.vue  textBanner.vue  textInput.vue  visualSwitch.vue
chessy_frontend/src/components/organisms/: formCard.vue
chessy_frontend/src/model/: SoundPlayer.js  chessCell.js
chessy_frontend/src/router/: index.js
chessy_frontend/src/stores/: userSession.js
chessy_frontend/src/views/: GameView.vue  LobbyView.vue  LoginView.vue  MissingView.vue
