[package]
name = "chess_engine"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "lib"]

[dependencies]
enum-iterator = "1.4.1"
serde = { version = "1.0.163", features = ["derive"] }
serde-wasm-bindgen = "0.5.0"
serde_json = "1.0.96"
thiserror = "1.0.40"
wasm-bindgen = "0.2.86"
