[package]
name = "chessy_backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix = "0.13.0"
actix-cors = "0.6.4"
actix-http = "3.3.1"
actix-identity = "0.5.2"
actix-rt = "2.8.0"
actix-service = "2.0.2"
actix-web = "4.3.1"
actix-web-actors = "4.2.0"
dotenv = "0.15.0"
env_logger = "0.10.0"
futures = "0.3.28"
futures-util = "0.3.28"
log = "0.4.18"
